Create the RoomService

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -18,16 +18,10 @@
         <button ng-click="vm.addRemovePlayer( -1 )">
           -
         </button>
-        <button>
+        <button ui-sref="room">
           Start
         </button>
       </div>
     </div>
   </section>
-  
-
-
-
-
-  <h3 ui-sref="room">Room</h3>
 </div>
