Add header and footer to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 
+  <header>
+    <h1>MEAN Blackjack</h1>
+  </header>
+
   <div ui-view></div>
+
+  <footer>
+    Made with ❤ by <a href="https://github.com/ericdouglas">Eric Douglas</a>
+  </footer>
   
   <!-- Angular Vendor Scripts -->
   <script src="public/vendor/angular/angular.min.js"></script>
