Share number of players in RoomService

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -14,7 +14,7 @@
         <button ng-click="vm.addRemovePlayer( -1 )">
           -
         </button>
-        <button ui-sref="room">
+        <button ng-click="vm.goToRoom()">
           Start
         </button>
       </div>
