--- a/client/room/room.html
+++ b/client/room/room.html
@@ -1,4 +1,30 @@
 <div>
-  <h1>Room</h1>
-  <h3 ui-sref="home">Home</h3>
+  
+  <section>
+    <!-- Message Box-->
+    <div class="msg-box">
+      <divi class="msg-title">
+        <strong>
+          Total players:
+        </strong>
+        <span ng-bind="vm.totalPlayers">
+        </span>
+        /
+        <strong>
+         Current Player:
+        </strong>
+        <span ng-bind="vm.currentPlayer.number">
+        </span>
+      </div>
+    </div>
+
+    <!-- Actual Player Box -->
+  </section>
+  
+  <aside>
+    <!-- All Players -->
+
+    <!-- Quit -->
+  </aside>
+
 </div>
