--- a/client/index.html
+++ b/client/index.html
@@ -31,5 +31,8 @@
   <script src="room/room.controller.js"></script>
   <script src="room/room.service.js"></script>
 
+  <!-- Helpers -->
+  <script src="helpers/dealer.service.js"></script>
+  
 </body>
 </html>
