Add quit button

--- a/client/room/room.html
+++ b/client/room/room.html
@@ -65,6 +65,10 @@
     </div>
 
     <!-- Quit -->
+    <div class="quit"
+         ng-click="vm.quit()">
+      Quit ✖
+    </div>
   </aside>
 
 </div>
