Set the wager for all players

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>MEAN Blackjack</title>
+
+  <link rel="stylesheet" href="public/vendor/angular-toastr/dist/angular-toastr.min.css">
 </head>
 <body>
 
@@ -19,6 +21,8 @@
   <!-- Angular Vendor Scripts -->
   <script src="public/vendor/angular/angular.min.js"></script>
   <script src="public/vendor/ui-router/release/angular-ui-router.min.js"></script>
+  <script src="public/vendor/angular-animate/angular-animate.min.js"></script>
+  <script src="public/vendor/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 
   <!-- Angular App Scripts -->
   <script src="app.js"></script>
