Hit cards for the current player

--- a/client/room/room.html
+++ b/client/room/room.html
@@ -44,6 +44,11 @@
           Stand
         </button>
       </div>
+      <div>
+        <span class="actual-player-score">
+          Score: {{ vm.currentPlayer.score }}          
+        </span>
+      </div>
     </div>
   </section>
   
