--- a/client/room/room.html
+++ b/client/room/room.html
@@ -71,6 +71,7 @@
     <div class="standby-player-box"
          ng-repeat="player in vm.playersData">
       <span ng-bind="player.name"></span>
+      <span> | Score: {{ player.score }}</span>
       <div class="standby-player-info">
         <div>
           <span class="micro-cards"
