Add /result files

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,9 @@
   <script src="room/room.controller.js"></script>
   <script src="room/room.service.js"></script>
 
+  <!-- Result -->
+  <script src="result/result.controller.js"></script>
+
   <!-- Helpers -->
   <script src="helpers/dealer.service.js"></script>
   
