Register how much the player had won or lost in prize property

--- a/client/result/result.html
+++ b/client/result/result.html
@@ -13,6 +13,12 @@
   </div>
 
   <!-- All players results -->
+  <div class="players-result"
+       ng-repeat="result in vm.allResults">
+    <span ng-bind="result.player"></span>
+    <span ng-bind="result.result"></span>
+    $<span ng-bind="result.prize"></span>
+  </div>
 
   <!-- Play again button -->
 
