Reinitialize the game

--- a/client/result/result.html
+++ b/client/result/result.html
@@ -21,7 +21,13 @@
   </div>
 
   <!-- Play again button -->
+  <button ng-click="vm.playAgain()">
+    Play Again
+  </button>
 
   <!-- Quit button -->
+  <button ng-click="vm.quit()">
+    Quit
+  </button>
 
 </div>
