Add rule when player won

--- a/client/result/result.html
+++ b/client/result/result.html
@@ -23,6 +23,7 @@
             ng-repeat="card in vm.playersData[ $index ].hand">
         {{ card.name }}{{ card.suit }}
       </span>
+      <span> | Score: {{ result.score }}</span>
     </div>
   </div>
 
