Store the result of each player in db

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
 
   <!-- Result -->
   <script src="result/result.controller.js"></script>
+  <script src="result/result.service.js"></script>
 
   <!-- Helpers -->
   <script src="helpers/dealer.service.js"></script>
