--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,20 +1,23 @@
-<div>
+<div class="container">
   <section>
-    <div class="players-box">
-      <div class="players-box title">
+    <div class="col-xs-4 list-group">
+      <div class="list-group-item active">
         Number of Players
       </div>
-      <div class="players-box number"
+      <div class="list-group-item"
            ng-bind="vm.totalPlayers">        
       </div>
-      <div class="players-box options">
-        <button ng-click="vm.addRemovePlayer( -1 )">
-          -
+      <div class="list-group-item">
+        <button ng-click="vm.addRemovePlayer( -1 )"
+                class="btn btn-default">
+          Remove -
         </button>
-        <button ng-click="vm.addRemovePlayer( 1 )">
-          +
+        <button ng-click="vm.addRemovePlayer( 1 )"
+                class="btn btn-default">
+          Add ✚
         </button>
-        <button ng-click="vm.goToRoom()">
+        <button ng-click="vm.goToRoom()"
+                class="btn btn-success">
           Start
         </button>
       </div>
