--- a/client/room/room.html
+++ b/client/room/room.html
@@ -115,7 +115,7 @@
         </div>
 
         <!-- Quit -->
-        <div class="quit"
+        <div class="btn btn-danger btn-lg"
              ng-click="vm.quit()">
           Quit ✖
         </div>
