--- a/client/room/room.html
+++ b/client/room/room.html
@@ -97,7 +97,7 @@
           <span>Score: {{ player.score }}</span>
           <div class="standby-player-info">
             <h3>
-              <div class="label label-primary"
+              <div class="btn btn-primary"
                     ng-repeat="card in player.hand">
                 {{ card.name }} {{ card.suit }}
               </div>
